# RPGproject

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildLinux.sh  buildWin.bat  humanoid.json  log.txt
asset/animations/: ambatakum.json  caca.json  hitler.json  idle.json  test.json
asset/models/: humanoid.json  humanoid2.json  humanoid3.json  humanoidpose.json  nazi.json
include/: common.hpp
src/: main.cpp
src/animation/fade/: FadeIn.hpp  FadeOut.cpp  FadeOut.hpp
src/animation/scaling/: Scaling.cpp  Scaling.hpp
src/animation/spritesheet/: Spritesheet.cpp  Spritesheet.hpp
src/camera/: Camera.cpp  Camera.hpp
src/clock/: Clock.cpp  Clock.hpp
src/effects/fade/: FadeIn.cpp  IFading.hpp
src/effects/scaling/: Scaling.cpp  Scaling.hpp
src/effects/spritesheet/: Spritesheet.cpp  Spritesheet.hpp
src/engine/: Engine.cpp  Engine.hpp
src/exception/: Exception.hpp
src/experimental/AABBcontinuous/: AABBcontinuous.cpp  AABBcontinuous.hpp
src/experimental/infinite_grid/: InfiniteGrid.cpp  InfiniteGrid.hpp
src/game_objects/: AObject.cpp  AObject.hpp  IObject.hpp
src/game_objects/aabb_collider/: AABBcollider.cpp  AABBcollider.hpp
src/game_objects/box/: Box.cpp  Box.hpp
src/helper/: color.hpp  parsing.hpp  utils.hpp
src/observer_listener/: Observer.cpp  Observer.hpp  Subject.cpp  Subject.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/resource_manager/: ResourceManager.cpp  ResourceManager.hpp
src/scene/: AScene.hpp  IScene.hpp
src/shaders/: DynamicBlur.cpp  DynamicBlur.hpp
src/ui/: AUIelement.hpp  IUIelement.hpp  UIelementContainer.hpp
(+108 files in other folders)
